--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <h4>Education</h4>
     <ul>
-      <li id="Courses">Certified Cloud Practitioner Certification (Pending) - 2024 </li>
+      <li id="Courses">Certified Cloud Practitioner Certification - 2024 </li>
         <b>AWS</b>
 <p></p>
       <li id="Courses">AWS re/Start program in Cloud Computing - 2024 </li>
