--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <b>Coding Black Females</b> 
     <p></p>
 
-      <li id="Courses">Python & JavaScript</li>
+      <li id="Courses">Python & JavaScript courses</li>
         <b>freeCodeCamp </b> 
     <p></p>
 
